# libimaplw

./: AuthenticationModel.hpp  AuthenticationProvider.hpp  CMakeLists.txt  ClientStateModel.hpp  ConfigModel.hpp  DataModel.hpp  DataProvider.hpp  DefaultProviders.hpp  Helpers.hpp  IMAPClientState.hpp  IMAPProvider.cpp  IMAPProvider.hpp  IMAPProvider.impl  Message.hpp  Providers.hpp  README.md  Responses.hpp  WordList.hpp  config.hpp  infix_ostream_iterator.hpp
CMake/: FindLibreSSL.cmake  GetLibreSSL.cmake  GetMimetic.cmake  GetMiniz.cmake
CMake/mimetic-patches/: contentid.patch  itparser.patch  patch.sh
